--- a/React with WebApi/client/src/components/categories/Categories.module.css
+++ b/React with WebApi/client/src/components/categories/Categories.module.css
@@ -5,15 +5,16 @@
     flex-direction: column;
     flex-wrap: wrap;
     gap: 30px;
-    width: 50%;
+    width: 70%;
     margin: auto;
     padding: 2% 0;
-    height: 15rem;
+    height: 100%;
 }
 
 .create {
-    width: 70%;
+    width: 100%;
     text-align: center;
+    margin-bottom: 2%;
 }
 
 .create a {
@@ -24,10 +25,13 @@
 
 .categories {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     flex-wrap: wrap;
+    gap: 40px;
     width: 100%;
+    height: 100%;
+    margin: auto;
 }
 
 .categories a {
@@ -43,3 +47,7 @@
     width: 25%;
 }
 
+.actions{
+    width: 30%;
+    text-align: center;
+}
