--- a/React with WebApi/client/src/components/products/Products.module.css
+++ b/React with WebApi/client/src/components/products/Products.module.css
@@ -95,3 +95,25 @@
     font-size: 1.1rem;
     cursor: pointer;
 }
+
+.delete{
+    background-color: rgb(245, 83, 96);
+    border: 1px solid rgb(240, 29, 145);
+    border-radius: 8px;
+    padding: 1% 4%;
+    margin: auto;
+    font-size: 1.1rem;
+    cursor: pointer;
+}
+
+.actionWrapper{
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 70%;
+    margin: auto;
+    margin-bottom: 2%;
+    gap: 30px;
+}
